--- a/TrinhTest/wwwroot/index.html
+++ b/TrinhTest/wwwroot/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>VTtech Solution</title>
-    <link rel="icon" type="image/x-icon" href="/assests/img/logo/favicon.ico">
+    <title>Trịnh o2o</title>
+    <link rel="icon" type="image/x-icon" href="/Assets/img/icons/flags/vietnam.png">
 </head>
 <body>
     <script type="text/javascript">
